@@ -1,3 +1,8 @@
+2004-11-07  Benoit Perrot <benoit@lrde.epita.fr>
+
+	* monoburg.c: Support long options; prefer `--without-glib' to
+	`-g'.
+
 2004-10-13  Benoit Perrot <benoit@lrde.epita.fr>
 
 	* TODO: New.
